--- a/ats-candidate-service/docker-compose.yml
+++ b/ats-candidate-service/docker-compose.yml
@@ -1,17 +1,31 @@
-version: "3.9"
+version: '3.9'
+
 services:
   postgres:
     image: postgres:15
     container_name: ats-postgres
-    restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: candidatesdb
+      POSTGRES_USER: ats
+      POSTGRES_PASSWORD: ats_pass
+      POSTGRES_DB: ats_candidates
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  minio:
+    image: quay.io/minio/minio
+    container_name: ats-minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"   # S3 API
+      - "9001:9001"   # Web Console
+    volumes:
+      - minio_data:/data
+
 volumes:
   postgres_data:
+  minio_data:
