--some db fixes

--- a/ats-candidate-service/appsettings.json
+++ b/ats-candidate-service/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Postgres": "Host=localhost;Port=5432;Database=candidatesdb;Username=postgres;Password=postgres"
+    "Postgres": "Host=localhost;Port=5432;Database=ats_candidates;Username=ats;Password=ats_pass;"
   },
   "Logging": {
     "LogLevel": {
