--- a/ats-candidate-service/docker-compose.yml
+++ b/ats-candidate-service/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   postgres:
     image: postgres:15
-    container_name: ats-postgres
+    container_name: ats-candidates-db
     environment:
       POSTGRES_USER: ats
       POSTGRES_PASSWORD: ats_pass
