--- a/ats-vacancy-service/docker-compose.yml
+++ b/ats-vacancy-service/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   mongodb:
     image: mongo:6.0
-    container_name: ats-mongodb
+    container_name: ats-vacancy-db
     restart: always
     ports:
       - "27017:27017"
