--- a/ats-candidate-service/appsettings.json
+++ b/ats-candidate-service/appsettings.json
@@ -15,5 +15,13 @@
     "SecretKey": "minioadmin",
     "BucketName": "resumes",
     "WithSSL": false
+  },
+  "AuthorizationService": { "BaseUrl": "http://localhost:5124" },
+  "RabbitMq": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "ats_user",
+    "Password": "ats_pass",
+    "Exchange": "auth.events"                // topic/headers/direct — оставим topic
   }
 }
