--- a/ats-authorization-service/appsettings.json
+++ b/ats-authorization-service/appsettings.json
@@ -17,6 +17,10 @@
     "Password": "ats_pass",
     "Exchange": "auth.events"                // topic/headers/direct — оставим topic
   },
+  "ServiceDiscovery": {
+    "ServiceDiscoveryUrl": "http://localhost:5137",
+    "UseLocalhostAsHost": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
