--- a/ats-candidate-service/appsettings.json
+++ b/ats-candidate-service/appsettings.json
@@ -16,6 +16,10 @@
     "BucketName": "resumes",
     "WithSSL": false
   },
+  "ServiceDiscovery": {
+    "ServiceDiscoveryUrl": "http://localhost:5137",
+    "UseLocalhostAsHost": true
+  },
   "AuthorizationService": { "BaseUrl": "http://localhost:5124" },
   "RabbitMq": {
     "HostName": "localhost",
