--- a/ats-interview-service/appsettings.json
+++ b/ats-interview-service/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "Postgres": "Host=localhost;Port=5435;Database=ats_interviews;Username=ats;Password=ats_pass"
   },
+  "ServiceDiscovery": {
+    "ServiceDiscoveryUrl": "http://localhost:5137",
+    "UseLocalhostAsHost": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
