--- a/ats-vacancy-service/appsettings.json
+++ b/ats-vacancy-service/appsettings.json
@@ -4,6 +4,10 @@
     "DatabaseName": "ats_vacancy_db",
     "VacanciesCollection": "Vacancies"
   },
+  "ServiceDiscovery": {
+    "ServiceDiscoveryUrl": "http://localhost:5137",
+    "UseLocalhostAsHost": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
