--- a/ats-recruitment-service/appsettings.json
+++ b/ats-recruitment-service/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5433;Database=ats_recruitment;Username=ats;Password=ats_pass"
   },
+  "ServiceDiscovery": {
+    "ServiceDiscoveryUrl": "http://localhost:5137",
+    "UseLocalhostAsHost": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
