--- a/ats-recruitment-service/ats-recruitment-service.csproj
+++ b/ats-recruitment-service/ats-recruitment-service.csproj
@@ -22,4 +22,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ats.ServiceDiscovery.Client\ats.ServiceDiscovery.Client.csproj" />
+    </ItemGroup>
+
 </Project>
