--- a/ats-service-discovery/appsettings.json
+++ b/ats-service-discovery/appsettings.json
@@ -5,6 +5,12 @@
     "Password": "",
     "DefaultDb": 0
   },
+  "RabbitMq": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "ats-service-discovery",
+    "Password": "ats-service-discovery"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information"
