--- a/ats-service-discovery/ats-service-discovery.csproj
+++ b/ats-service-discovery/ats-service-discovery.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.20"/>
+        <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
         <PackageReference Include="StackExchange.Redis" Version="2.9.32" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
     </ItemGroup>
