--- a/ats-authorization-service/appsettings.json
+++ b/ats-authorization-service/appsettings.json
@@ -6,16 +6,14 @@
     "BaseUrl": "http://localhost:8080",
     "Realm": "ats",
     "AdminClientId": "ats-admin",
-    "AdminClientSecret": "supersecret",        // если используете confidential client
-    "AdminUsername": "admin",                 // или user/pass, если проще
-    "AdminPassword": "admin"
+    "AdminClientSecret": "supersecret"      
   },
   "RabbitMq": {
     "HostName": "localhost",
     "Port": 5672,
     "UserName": "ats_user",
     "Password": "ats_pass",
-    "Exchange": "auth.events"                // topic/headers/direct — оставим topic
+    "Exchange": "auth.events"                
   },
   "ServiceDiscovery": {
     "ServiceDiscoveryUrl": "http://localhost:5137",
