--- a/ats-authorization-service/ats-authorization-service.csproj
+++ b/ats-authorization-service/ats-authorization-service.csproj
@@ -25,7 +25,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ats.ServiceDiscovery.Client\ats.ServiceDiscovery.Client.csproj" />
+      <ProjectReference Include="..\ats.messaging.library\ats.messaging.library.csproj" />
+      <ProjectReference Include="..\ats.servicediscovery.library\ats.servicediscovery.library.csproj" />
     </ItemGroup>
 
 </Project>
