--- a/ats-service-discovery/appsettings.json
+++ b/ats-service-discovery/appsettings.json
@@ -8,8 +8,8 @@
   "RabbitMq": {
     "HostName": "localhost",
     "Port": 5672,
-    "UserName": "ats-service-discovery",
-    "Password": "ats-service-discovery"
+    "UserName": "ats_user",
+    "Password": "ats_pass"
   },
   "Logging": {
     "LogLevel": {
