--- a/ats-candidate-service/ats-candidate-service.csproj
+++ b/ats-candidate-service/ats-candidate-service.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.20" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.20" />
         <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="7.0.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.*" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.*">
@@ -23,12 +23,14 @@
         <PackageReference Include="Minio" Version="6.0.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.*" />
         <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ats-shared-contracts\ats-shared-contracts.csproj" />
-      <ProjectReference Include="..\ats.ServiceDiscovery.Client\ats.ServiceDiscovery.Client.csproj" />
+      <ProjectReference Include="..\ats.sharedcontracts.library\ats.sharedcontracts.library.csproj" />
+      <ProjectReference Include="..\ats.messaging.library\ats.messaging.library.csproj" />
+      <ProjectReference Include="..\ats.servicediscovery.library\ats.servicediscovery.library.csproj" />
+      <ProjectReference Include="..\ats.users.library\ats.users.library.csproj" />
     </ItemGroup>
 
 </Project>
