--- a/ats-recruitment-service/ats-recruitment-service.csproj
+++ b/ats-recruitment-service/ats-recruitment-service.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ats.ServiceDiscovery.Client\ats.ServiceDiscovery.Client.csproj" />
+      <ProjectReference Include="..\ats.servicediscovery.library\ats.servicediscovery.library.csproj" />
     </ItemGroup>
 
 </Project>
