--- a/ats.servicediscovery.library/ats.servicediscovery.library.csproj
+++ b/ats.servicediscovery.library/ats.servicediscovery.library.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>ats.ServiceDiscovery.Client</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
