--- a/ats-authorization-service/appsettings.json
+++ b/ats-authorization-service/appsettings.json
@@ -13,7 +13,8 @@
     "Port": 5672,
     "UserName": "ats_user",
     "Password": "ats_pass",
-    "Exchange": "auth.events"                
+    "Exchange": "ats.exchange",
+    "ClientId": "ats-auth-service"
   },
   "ServiceDiscovery": {
     "ServiceDiscoveryUrl": "http://localhost:5137",
