--- a/ats-candidate-service/appsettings.json
+++ b/ats-candidate-service/appsettings.json
@@ -26,6 +26,7 @@
     "Port": 5672,
     "UserName": "ats_user",
     "Password": "ats_pass",
-    "Exchange": "auth.events"                // topic/headers/direct — оставим topic
+    "Exchange": "auth.events",
+    "ClientId": "candidate"
   }
 }
