--- a/ats-candidate-service/ats-candidate-service.csproj
+++ b/ats-candidate-service/ats-candidate-service.csproj
@@ -22,15 +22,13 @@
         </PackageReference>
         <PackageReference Include="Minio" Version="6.0.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.*" />
-        <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
+        <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ats.sharedcontracts.library\ats.sharedcontracts.library.csproj" />
-      <ProjectReference Include="..\ats.messaging.library\ats.messaging.library.csproj" />
+      <ProjectReference Include="..\ats.integration.library\ats.integration.library.csproj" />
       <ProjectReference Include="..\ats.servicediscovery.library\ats.servicediscovery.library.csproj" />
-      <ProjectReference Include="..\ats.users.library\ats.users.library.csproj" />
     </ItemGroup>
 
 </Project>
