--- a/ats-candidate-service/appsettings.json
+++ b/ats-candidate-service/appsettings.json
@@ -26,7 +26,7 @@
     "Port": 5672,
     "UserName": "ats_user",
     "Password": "ats_pass",
-    "Exchange": "auth.events",
+    "Exchange": "ats.exchange",
     "ClientId": "candidate"
   }
 }
