--- a/ats-candidate-service/ats-candidate-service.csproj
+++ b/ats-candidate-service/ats-candidate-service.csproj
@@ -31,4 +31,8 @@
       <ProjectReference Include="..\ats.servicediscovery.library\ats.servicediscovery.library.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
