--- a/ats-recruitment-service/ats-recruitment-service.csproj
+++ b/ats-recruitment-service/ats-recruitment-service.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ats.integration.library\ats.integration.library.csproj" />
       <ProjectReference Include="..\ats.servicediscovery.library\ats.servicediscovery.library.csproj" />
     </ItemGroup>
 
