--fix mq integration

--- a/ats-recruitment-service/appsettings.json
+++ b/ats-recruitment-service/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Database=ats_recruitment;Username=ats;Password=ats_pass"
+    "Postgres": "Host=localhost;Port=5433;Database=ats_recruitment;Username=ats;Password=ats_pass"
   },
   "ServiceDiscovery": {
     "ServiceDiscoveryUrl": "http://localhost:5137",
@@ -11,6 +11,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "RabbitMq": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "ats_user",
+    "Password": "ats_pass",
+    "Exchange": "ats.exchange",
+    "ClientId": "recruitment"
   },
   "AllowedHosts": "*"
 }
