--- a/ats-interview-service/appsettings.json
+++ b/ats-interview-service/appsettings.json
@@ -12,5 +12,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitMq": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "ats_user",
+    "Password": "ats_pass",
+    "Exchange": "ats.exchange",
+    "ClientId": "interview"
+  },
   "AllowedHosts": "*"
 }
