--- a/ats-candidate-service/ats-candidate-service.csproj
+++ b/ats-candidate-service/ats-candidate-service.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.*" />
         <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+        <PackageReference Include="AspNetCore.HealthChecks.Npgsql" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
