--- a/ats-interview-service/ats-interview-service.csproj
+++ b/ats-interview-service/ats-interview-service.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="AspNetCore.HealthChecks.Npgsql" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
