--- a/ats-recruitment-service/ats-recruitment-service.csproj
+++ b/ats-recruitment-service/ats-recruitment-service.csproj
@@ -20,6 +20,7 @@
   </PackageReference>
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.*" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+        <PackageReference Include="AspNetCore.HealthChecks.Npgsql" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
