--- a/ats-vacancy-service/Dockerfile
+++ b/ats-vacancy-service/Dockerfile
@@ -1,17 +1,47 @@
-FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
-WORKDIR /app
-EXPOSE 5000
-
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+# ============================
+# BUILD STAGE
+# ============================
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
+
+# Copy solution file and project files for better layer caching
+COPY ats.sln .
+COPY ats-vacancy-service/ats-vacancy-service.csproj ./ats-vacancy-service/
+COPY ats.integration.library/ats.integration.library.csproj ./ats.integration.library/
+COPY ats.servicediscovery.library/ats.servicediscovery.library.csproj ./ats.servicediscovery.library/
+
+# Restore dependencies
+RUN dotnet restore "ats-vacancy-service/ats-vacancy-service.csproj"
+
+# Copy remaining source code
 COPY . .
-RUN dotnet restore "ats-vacancy-service.csproj"
-RUN dotnet build "ats-vacancy-service.csproj" -c Release -o /app/build
 
-FROM build AS publish
-RUN dotnet publish "ats-vacancy-service.csproj" -c Release -o /app/publish
+# Build and publish
+WORKDIR /src/ats-vacancy-service
+RUN dotnet publish -c Release -o /app/publish --no-restore
 
-FROM base AS final
+# ============================
+# RUNTIME STAGE
+# ============================
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
-COPY --from=publish /app/publish .
+
+# Create a non-root user
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+# Copy published files
+COPY --from=build /app/publish .
+
+# Change ownership to non-root user
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
+
+# Set environment variables
+ENV ASPNETCORE_URLS=http://0.0.0.0:8080
+ENV ASPNETCORE_ENVIRONMENT=Production
+
+EXPOSE 8080
+
 ENTRYPOINT ["dotnet", "ats-vacancy-service.dll"]
