--- a/ats-candidate-service/ats-candidate-service.csproj
+++ b/ats-candidate-service/ats-candidate-service.csproj
@@ -25,6 +25,7 @@
         <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
         <PackageReference Include="AspNetCore.HealthChecks.Npgsql" Version="9.0.0" />
+        <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
     </ItemGroup>
 
     <ItemGroup>
