--- a/ats-recruitment-service/ats-recruitment-service.csproj
+++ b/ats-recruitment-service/ats-recruitment-service.csproj
@@ -21,6 +21,7 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.*" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
         <PackageReference Include="AspNetCore.HealthChecks.Npgsql" Version="9.0.0" />
+        <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
     </ItemGroup>
 
     <ItemGroup>
