--- a/ats-vacancy-service/ats-vacancy-service.csproj
+++ b/ats-vacancy-service/ats-vacancy-service.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.20"/>
         <PackageReference Include="MongoDB.Driver" Version="3.5.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+        <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
     </ItemGroup>
 
     <ItemGroup>
